# docker-template-test

./: Cargo.toml  Dockerfile  docker-compose.yaml  docker-stack.yaml  rust-toolchain.toml
.github/workflows/: docker-image.yml  docker-publish.yml
src/: main.rs
