[package]
name = "docker-template-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
features = "0.10.0"
json = "0.12.4"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["sync", "rt-multi-thread", "time", "macros", "signal"] }
